--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 .idea/
 dist/
 *.egg-info
+pandasticsearch/__pycache__/
+pandasticsearch/utils/__pycache__/
+tests/__pycache__/
+tests/utils/__pycache__/
