--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include *.txt
 include *.md
-recursive-include docs *.txt
+recursive-include docs
 global-include pandasticsearch *.py
+include requirements.txt
